--- a/game/templates/game/role.html
+++ b/game/templates/game/role.html
@@ -159,6 +159,7 @@
     </div>
 {% endblock %}
 
+<!-- TODO: role.html 페이지에선 실시간 게임 상태 확인 하지 않음! -->
 {% block extra_body %}
     <!-- 게임 상태 실시간 확인 -->
     <script>
